--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <script src="./js/script.js" defer></script>
 </head>
 <body>
-  
+  <button id="createBtn"> Create Canvas</button>
 </body>
 </html>
